# copa-challenger

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
dashboard/: .gitignore  evidence.config.yaml  package-lock.json  package.json
dashboard/pages/: edicoes.md  favorito.md  index.md  previsoes-2026.md
dashboard/sources/copa/: connection.yaml  edition_kpis.sql  favorite_by_round.sql  matches.sql  predictions_2026.sql  shootouts.sql  team_performance.sql
notebooks/: 02_eda.html  02_eda.py
sql/marts/: int_match_stages.sql  int_team_matches.sql  mart_edition_kpis.sql  mart_knockout_analysis.sql  mart_ranking_vs_result.sql  mart_team_performance.sql  mart_team_strength_inputs.sql
sql/seeds/: team_crosswalk.sql
sql/staging/: stg_matches.sql  stg_rankings.sql  stg_world_cup.sql
src/copa_challenger/: __init__.py  cli.py  config.py  db.py
src/copa_challenger/agent/: __init__.py  agent.py  app.py  executor.py  schema.py  sql_guard.py
src/copa_challenger/analytics/: __init__.py  queries.py  report.py
src/copa_challenger/data/: __init__.py  build.py  dashboard.py  download.py  ingest.py
src/copa_challenger/predict/: __init__.py  evaluate.py  features.py  model.py  predict.py
tests/: test_backtest_bootstrap.py  test_cli_pipeline.py  test_predict_model.py  test_predictions_2026.py  test_sql_guard.py
