[project]
name = "copa-challenger"
version = "0.1.0"
description = "World Cup Intelligence Desk — Copa Challenger (Dados por Todos)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1",
    "polars>=1.17",
    "kaggle>=1.6",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
