[project]
name = "copa-challenger"
version = "0.1.0"
description = "World Cup Intelligence Desk — Copa Challenger (Dados por Todos)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1",
    "polars>=1.17",
    "kaggle>=1.6",
    "typer>=0.15",
]

[project.scripts]
copa = "copa_challenger.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copa_challenger"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
