[project]
name = "copa-challenger"
version = "0.1.0"
description = "World Cup Intelligence Desk — Copa Challenger (Dados por Todos)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1",
    "polars>=1.17",
    "kaggle>=1.6",
    "typer>=0.15",
    "numpy>=2.0",
]

[project.scripts]
copa = "copa_challenger.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
]

eda = [
    "marimo>=0.23",
    "altair>=6.2",
    "polars>=1.17",
    "pyarrow>=24.0.0",
]

agent = [
    "pydantic-ai[google]>=2.5",
    "logfire>=4.37",
    "sqlglot>=30",
    "streamlit>=1.58",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copa_challenger"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
